--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 192.168.4.89",
+    "start": "ng serve --host 192.168.64.7 --public-host http://http.192.168.64.7.nip.io",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
